--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     }
 
    img{
-    border-color: #070707;
-    border-style: none;
+
+    border-color: #ffffff00;
     text-align: center;
+    border-style: dotted;
+  
     }
 
    .contenido {
@@ -55,7 +57,7 @@
 
     .imagenes {
       grid-area: imagenes;
-      background-color: #e8aebf;
+      background-color: #eca9bd;
       padding: 20px;
       display: flex;
       flex-direction: column;
@@ -66,8 +68,9 @@
     .imagenes img {
       max-width: 100%;
       height: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-style: ridge;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(169, 117, 117, 0.1);
     }
     </style>
 </head>
@@ -90,7 +93,7 @@
             
         <li><b><u>Finalidad de nuestra página web:</u></b></li>
           <p>Buscamos <b>concientizar sobre la deserción escolar,</b> sus causas y consecuencias, además de promover soluciones y demostrar que con compromiso, apoyo y motivación, todos podemos contribuir a que ningún estudiante abandone su educación. Queremos que esta plataforma sea un espacio de información, reflexión y acción.</p>
-            <img src="foto.jpeg" alt="¿QUE ES LA DESERCION  ESCOLAR?" width="620">
+            <img src="foto.jpg" alt="¿QUE ES LA DESERCION  ESCOLAR?" width="620">
       <h1><b></b> ¡No abandones tus sueños, porque lo mejor de ti aún está por construirse! </h1>
       <p><a href="https://www.psicoglobal.com/blog/como-mantenerse-motivado">La motivacion...IR A GOOGLE</a></p>
       <p><a href="https://asana.com/es/resources/tips-get-motivated">Consejor para sentirte motivado...IR A GOOGLE</a></p>
@@ -100,10 +103,11 @@
   </div>
   <div class="imagenes">
     <h2><b>"MOTIVADOS PARA SEGUIR APRENDIENDO"</b></h2>
-    <img src="foto principal.jpeg" alt="MOTIVADOS PARA SEGUIR APRENDIENDO" width="620">
-    
-    <video controls width="220">
+    <img src="foto principal.jpeg" alt="MOTIVADOS PARA SEGUIR APRENDIENDO" width="650">
+    <h3> CONOCE UN POCO MAS DE... </h3>
+    <video controls width="400">
     <source src="video.mp4.mp4"></video>
+    <h3>¿QUE ES LA DESERCION ESCOLAR?</h3>
     <audio controls>
     <source src="audio.mp3" type="audio/mp4"></audio>
   </div>
